Opened 13 years ago
Closed 13 years ago
#2783 closed defect (fixed)
ffplay: fix -autoexit for -t < 8 (wavpack)
| Reported by: | ami_stuff | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | undetermined |
| Version: | unspecified | Keywords: | |
| Cc: | cus@passwd.hu | Blocked By: | |
| Blocking: | Reproduced by developer: | no | |
| Analyzed by developer: | no |
Description
http://samples.mplayerhq.hu/A-codecs/lossless/wavpack/test_suite/num_channels/mono-1.wv
works ok when -t >= 8
C:\>ffplay -t 7 -autoexit mono-1.wv
ffplay version 2.0-54bbb90 Copyright (c) 2003-2013 the FFmpeg developers
built on Jul 12 2013 12:59:51 with gcc 4.6.2 (GCC)
configuration: --disable-asm --disable-w32threads --disable-ffprobe --enable-g
pl
libavutil 52. 39.100 / 52. 39.100
libavcodec 55. 18.102 / 55. 18.102
libavformat 55. 12.102 / 55. 12.102
libavdevice 55. 3.100 / 55. 3.100
libavfilter 3. 80.100 / 3. 80.100
libswscale 2. 3.100 / 2. 3.100
libswresample 0. 17.102 / 0. 17.102
libpostproc 52. 3.100 / 52. 3.100
Input #0, wv, from 'mono-1.wv': 0KB vq= 0KB sq= 0B f=0/0
Duration: 00:00:24.68, start: 0.000000, bitrate: 418 kb/s
Stream #0:0: Audio: wavpack, 44100 Hz, mono, s16p
0.03 M-A: 0.000 fd= 0 aq= 0KB vq= 0KB sq= 0B f=0/0
Attachments (1)
Change History (5)
by , 13 years ago
| Attachment: | 0001-ffplay-ensure-we-got-the-last-frame-from-the-decoder.patch added |
|---|
follow-up: 3 comment:1 by , 13 years ago
comment:2 by , 13 years ago
| Cc: | added |
|---|
comment:3 by , 13 years ago
comment:4 by , 13 years ago
| Resolution: | → fixed |
|---|---|
| Status: | new → closed |
Should be fixed in latest git master.
Note:
See TracTickets
for help on using tickets.



Could you try the attached patch?